// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build scope with child scope 1`] = `
{
  "rootScope": {
    "children": [
      {
        "children": [],
        "id": 2,
        "idents": [
          {
            "kind": "ref",
            "originalName": "x",
          },
        ],
        "kind": "body",
        "parent": [Circular],
      },
    ],
    "id": 1,
    "idents": [
      {
        "kind": "decl",
        "originalName": "foo",
      },
    ],
    "kind": "module",
    "parent": null,
  },
}
`;

exports[`build scope with ident 1`] = `
{
  "rootScope": {
    "children": [],
    "id": 0,
    "idents": [
      {
        "kind": "decl",
        "originalName": "x",
      },
    ],
    "kind": "module",
    "parent": null,
  },
}
`;
